# nmc

./: .gitignore  README.md  neuralinvariants_local.sh  run.py
environments/abc/: Dockerfile  run_experiment.py
environments/ebmc/: Dockerfile  run_experiment.py
environments/neuralinvariants/: Dockerfile  pyproject.toml  requirements.txt  run_experiment.py
environments/neuralinvariants/src/nur/: __init__.py  bitwuzla_utils.py  check_with_nuxmv.py  gurobi_check.py  gurobi_train.py  parsing.py  smt_train.py
environments/nuxmv/: Dockerfile  nuXmv_IC3  run_experiment.py
experiments/Liveness/: 1_PWM.py  1_blink.py  1_delay.py  1_gray.py  1_i2c.py  1_lcd.py  1_load_store.py  1_seven_seg.py  1_thermocouple.py  1_uart.py  1_vga.py  2_delay.py  2_gray.py  2_seven_seg.py  3_gray.py
experiments/Safety/: s1_delay.py  s1_lcd.py  s1_vga.py  s2_delay.py  s2_lcd.py  s2_vga.py  s_PWM.py  s_blink.py  s_gray.py  s_i2c.py  s_load_store.py  s_seven_seg.py  s_thermocouple.py  s_uart.py
experiments/Safety+Liveness/: 1_PWM_SL.py  1_blink_SL.py  1_delay_SL.py  1_gray_SL.py  1_i2c_SL.py  1_lcd_SL.py  1_load_store_SL.py  1_seven_seg_SL.py  1_thermocouple_SL.py  1_uart_SL.py  1_vga_SL.py  2_delay_SL.py  2_gray_SL.py  2_load_store_SL.py
